language/move-prover/tests/sources/functional/global_invariants.exp
Move prover returns: exiting with boogie verification errors
error: global memory invariant does not hold
   ┌─ tests/sources/functional/global_invariants.move:19:9
   │
19 │         invariant [global] forall a: address where exists<R>(a): exists<S>(a);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/global_invariants.move:39: create_R_invalid
   =         account = <redacted>
   =     at tests/sources/functional/global_invariants.move:41: create_R_invalid
   =     at tests/sources/functional/global_invariants.move:39: create_R_invalid
   =     at tests/sources/functional/global_invariants.move:41: create_R_invalid
   =     at tests/sources/functional/global_invariants.move:19

error: global memory invariant does not hold
   ┌─ tests/sources/functional/global_invariants.move:21:9
   │
21 │         invariant update [global] forall a: address where old(exists_R(a)): exists<R>(a);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/global_invariants.move:63: remove_R_invalid
   =         account = <redacted>
   =     at tests/sources/functional/global_invariants.move:65: remove_R_invalid
   =         <redacted> = <redacted>
   =     at tests/sources/functional/global_invariants.move:63: remove_R_invalid
   =     at tests/sources/functional/global_invariants.move:66: remove_R_invalid
   =     at tests/sources/functional/global_invariants.move:19
   =     at tests/sources/functional/global_invariants.move:21

error: global memory invariant does not hold
   ┌─ tests/sources/functional/global_invariants.move:19:9
   │
19 │         invariant [global] forall a: address where exists<R>(a): exists<S>(a);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/global_invariants.move:54: remove_S_invalid
   =         account = <redacted>
   =     at tests/sources/functional/global_invariants.move:56: remove_S_invalid
   =         <redacted> = <redacted>
   =     at tests/sources/functional/global_invariants.move:19
